# act-sim

./: .dockerignore  .gitignore  README.md  pyproject.toml
.github/workflows/: build-vastai-image.yml
configs/act/: base.py  sim_transfer_cube_episode0_overfit.py  sim_transfer_cube_single_episode.py
deploy/: train_act_aloha_modal.py  train_act_vastai.py  train_custom_act_modal.py  train_official_act_modal.py  vastai.Dockerfile
docs/: act_debugging_learnings.md
models/act/: act.py  attention.py  helper.py  one_batch_smoke.py  pos_emb.py  train.py
models/act/old/: act.py  eval.py
models/act_official/: __init__.py  backbone.py  build.py  detr_vae.py  eval_official.py  misc.py  policy.py  position_encoding.py  train_official.py  transformer.py
utils/: config.py
